test/errors/indexed_offsets_error/zs/id_in_array_expression_error.zs
package id_in_array_expression_error;

struct IdInArrayExpressionError
{
    uint32 value;
    uint32 offsets[];
offsets[value]:
    string fields[];
};
